# medius

./: .gitignore  Cargo.toml  LICENSE-MIT  OVERVIEW.md  README.md
.github/workflows/: capi.yml  ci.yml  release.yml
bindings/: DIFFERENCES.md  README.md
bindings/cpp/: CMakeLists.txt  conanfile.py
bindings/cpp/examples/: quickstart.cpp
bindings/cpp/include/medius/: medius.hpp
bindings/cpp/tests/: test_mock.cpp  test_odr.cpp
bindings/python/: .gitignore  README.md  hatch_build.py  pyproject.toml
bindings/python/medius/: __init__.py  _device.py  _enums.py  _errors.py  _mock.py  _native.py  _streams.py  _types.py
bindings/python/tests/: conftest.py  test_bindings.py
docs/: architecture.md
docs/superpowers/plans/: 2026-06-14-device-link-restructure.md
docs/superpowers/specs/: 2026-06-30-c-abi-bindings-design.md
examples/: async.rs  basic.rs  discover.rs  hw_full.rs  hw_soak.rs  hw_validate.rs  mock.rs  paced.rs
medius-capi/: Cargo.toml  cbindgen.toml
medius-capi/include/: medius.h
medius-capi/src/: convert.rs  ctypes.rs  device.rs  error.rs  flash.rs  helpers.rs  keys.rs  lib.rs  mock.rs  stream.rs
medius-capi/src/tests/: abi.rs  helpers.rs  mod.rs
src/: config.rs  error.rs  flash.rs  lib.rs  mock.rs  trace.rs
src/asyncv/: mod.rs
src/device/: admin.rs  asyncv.rs  buttons.rs  catch.rs  commands.rs  connect.rs  counters.rs  discover.rs  imperfect.rs  inject.rs  keyboard.rs  led.rs  lock.rs  logs.rs  media.rs  mod.rs  movement.rs  options.rs  query.rs  reboot.rs  reconcile.rs  tests.rs
src/error/: mod.rs
src/flash/: mod.rs
src/link/: catch.rs  correlation.rs  keepalive.rs  logs.rs  mod.rs  reader.rs  reconcile.rs  reconnect.rs  slot.rs
src/mock/: mod.rs
src/pacer/: clock.rs  metrics.rs  mod.rs  tests.rs
src/protocol/: command.rs  crc.rs  frame.rs  mod.rs  opcode.rs  response.rs  types.rs
src/tests/: async_query.rs  behavior.rs  catch.rs  concurrency.rs  correlation.rs  device_info.rs  imperfect.rs  keepalive.rs  keyboard.rs  led.rs  lock.rs  mod.rs  options.rs  reconcile.rs  reconnect.rs  robustness.rs
src/trace/: mod.rs
src/transport/: linux.rs  mock.rs  mod.rs  scan.rs  serial.rs  windows.rs
src/types/: button.rs  caps.rs  counters.rs  device_info.rs  emit_pace.rs  health.rs  imperfect.rs  inject.rs  input.rs  kbd_caps.rs  keyboard.rs  led.rs  lock.rs  log.rs  media.rs  mod.rs  mouse_caps.rs  mouse_info.rs  port.rs  rate.rs  reboot.rs  stats.rs  version.rs
tests/: async_query.rs  behavior.rs  concurrency.rs  keepalive.rs  robustness.rs
tools/: gen-header.sh
