[package]
name = "medius"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Host control library for the medius transparent mouse passthrough box"
license = "MIT OR Apache-2.0"
keywords = ["medius", "mouse", "hid", "serial", "injection"]
categories = ["hardware-support", "api-bindings"]

# docs.rs builds with every feature enabled and the `docsrs` cfg set, so the doc_auto_cfg feature
# badges (see lib.rs) render on docs.rs. The cfg only activates there, so stable/CI builds are
# unaffected.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = []                              # thin wrapper over the sync core (flume async recv, no runtime dep)
mock = []                               # public scriptable fake box
flash = []                              # esptool reboot+flash handoff
tracing = ["dep:tracing"]               # library-side instrumentation

[dependencies]
thiserror = "2"
flume = "0.11"
parking_lot = "0.12"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Async tests use futures' executor::block_on — NO tokio (the wrapper is runtime-agnostic).
futures = { version = "0.3", default-features = false, features = ["executor"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Devices_Communication",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_Performance",
  "Win32_Security",
  "Win32_Devices_DeviceAndDriverInstallation",
] }

# basic opens a real device — it compiles everywhere, but needs a connected box to RUN.
[[example]]
name = "basic"

# hw_full is the on-hardware validation suite (Linux; grabs the clone's evdev node). It compiles
# without features; build with `--features async` (or `--all-features`) to include the async gate.
[[example]]
name = "hw_full"
