[package]
name = "medius"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Host control library for the medius transparent mouse passthrough box"
license = "MIT OR Apache-2.0"
keywords = ["medius", "mouse", "hid", "serial", "makcu"]
categories = ["hardware-support", "api-bindings"]

# docs.rs builds with every feature enabled and the `docsrs` cfg set, so the doc_auto_cfg feature
# badges (see lib.rs) render on docs.rs. The cfg only activates there, so stable/CI builds are
# unaffected.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = []                              # thin wrapper over the sync core (flume async recv, no runtime dep)
mock = []                               # public scriptable fake box
flash = []                              # esptool reboot+flash handoff
tracing = ["dep:tracing"]               # library-side instrumentation

[dependencies]
thiserror = "2"
flume = "0.11"
parking_lot = "0.12"
serialport = "4"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Async tests use futures' executor::block_on — NO tokio (the wrapper is runtime-agnostic).
futures = { version = "0.3", default-features = false, features = ["executor"] }

# libc is only used by the Linux `hw_full` example (evdev EVIOCGRAB), not the library itself.
[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"

# basic opens a real device — it compiles everywhere, but needs a connected box to RUN.
[[example]]
name = "basic"

# hw_full is the on-hardware validation suite (Linux; grabs the clone's evdev node). It compiles
# without features; build with `--features async` (or `--all-features`) to include the async gate.
[[example]]
name = "hw_full"
