[workspace]
members = ["medius-capi"]
resolver = "3"

[package]
name = "medius"
version = "2.3.0"
edition = "2024"
rust-version = "1.85"
description = "Host control library for the medius transparent mouse passthrough box"
license = "MIT"
keywords = ["medius", "mouse", "hid", "serial", "makcu"]
categories = ["hardware-support", "api-bindings"]

# Render the feature-gated async queries + mock builders on docs.rs.
[package.metadata.docs.rs]
all-features = true

[features]
default = []
async = []                              # thin wrapper over the sync core (flume async recv, no runtime dep)
mock = []                               # public scriptable fake box
flash = []                              # esptool reboot+flash handoff
tracing = ["dep:tracing"]               # library-side instrumentation

[dependencies]
thiserror = "2"
flume = "0.12"
parking_lot = "0.12"
serialport = "4"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Async tests use futures' executor::block_on — NO tokio (the wrapper is runtime-agnostic).
futures = { version = "0.3", default-features = false, features = ["executor"] }

# libc is only used by the Linux `hw_full` example (evdev EVIOCGRAB), not the library itself.
[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"

# basic opens a real device — it compiles everywhere, but needs a connected box to RUN.
[[example]]
name = "basic"

# hw_full is the on-hardware validation suite (Linux; grabs the clone's evdev node). It compiles
# without features; build with `--features async` (or `--all-features`) to include the async gate.
[[example]]
name = "hw_full"
